# Simple-C-Deep-Learning

./: CMakeLists.txt  README.md
include/: matrix.h  nn.h
src/: main.c  matrix.c  nn.c
